# Villalobos_VictoriaExamenCpp

./: CMakeLists.txt  README.md  main.cpp  main.h
EJERCICIO1/: número.cpp  número.h
EJERCICIO2/: Día.cpp  Día.h
EJERCICIO3/: Calificaciones.cpp  Calificaciones.h
EJERCICIO4/: Precio.cpp  Precio.h
